# ci

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md
bb/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: ConfigureExecutable.cmake  ConfigureLibrary.cmake  ConfigureTest.cmake  DOCI_HeadConfig.cmake  DOCI_HeadConfigVersion.cmake  FindPackages.cmake  FindSpectra.cmake  InstallLibrary.cmake  SetCMakeEnvironment.cmake
do_not_need_i_think/: BaseSolver.hpp  DavidsonSolver.cpp  DavidsonSolver.hpp  DenseHamiltonianSolver.hpp
docs/: ci.puml  ci2.puml  ci_laurent.puml
exe/: 10Bohr.cpp  3Bohr.cpp  CMakeLists.txt  DOCI_timings.cpp  NO_2.xyz  constrained_doci.cpp  constrained_doci_base.cpp  constrained_doci_base_op.cpp  constrained_doci_base_op_tight.cpp  constrained_doci_multi.cpp  constrained_doci_multi_321.cpp  dense_sparse_DOCI_timings.cpp  fci_NO_data.cpp  fci_NO_data3.cpp  fci_NO_data_2.cpp  fci_NO_data_3.cpp  fci_NO_data_4.cpp  h2_fci.cpp  no_me.cpp  no_pb.cpp  no_pb_all.cpp  no_pb_con.cpp  no_pb_con_final.cpp  no_pb_con_me.cpp  no_pb_con_self.cpp  no_pb_con_self_3.cpp  no_pb_new.cpp  no_timings.cpp
fro/: 8_solved.out  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: AddressingMatrix.h  AddressingMatrix.hpp  BaseCI.hpp  BaseHamiltonianSolver.hpp  BaseMatrixSolver.hpp  BaseSolver.hpp  CI_Abstract_Class.hpp  CI_basis.hpp  CI_basis_mulliken.hpp  DOCI.h  DOCI.hpp  DOCI_Class.hpp  DOCI_DENSE.h  DOCI_DENSE.hpp  DOCI_Head.hpp  DOCI_dense.hpp  DOCI_utility.hpp  DataWrapper.h  DavidsonHamiltonian.hpp  DavidsonSolver.hpp  DenseDOCI.hpp  DenseHamiltonian.hpp  DenseSolver.hpp  Extras.h  Extras.hpp  FCI.hpp  Hamiltonian.hpp  Io.h  MatrixSolver.hpp  NormalGenerator.hpp  RHFWrapper.h  SOptimizer.hpp  SolverType.hpp  SparseDOCI.hpp  SparseSolver.hpp  State.hpp  StaticWrapper.h  StorageType.hpp  bitlong.hpp  bitset.hpp  (+4 more)
last/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lasttry/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
legit_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
makk/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
not_parsed_yet/: CI_Abstract_Class.cpp  CI_Abstract_Class.hpp  DOCI.cpp  DOCI_test.cpp  DenseHamiltonian.cpp  Hamiltonian.hpp  Hamiltonian_test.cpp
not_yet_parsed/: BaseCI.cpp  Hamiltonian.cpp  State_test.cpp
old_test/: DOCI_dense_test.cpp  DOCI_sparse_test.cpp  DOCI_test.cpp  FCI_dense_test.cpp  RDM_test.cpp  mulliken_test.cpp
one/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
pp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: AddressingMatrix.cpp  BaseCI.cpp  BaseHamiltonianSolver.cpp  BaseMatrixSolver.cpp  BaseSolver.cpp  CI_Abstract_Class.cpp  CI_basis.cpp  CI_basis_mulliken.cpp  CMakeLists.txt  DOCI.cpp  DOCI_Class.cpp  DOCI_DENSE.cpp  DOCI_dense.cpp  DOCI_utility.cpp  DataWrapper.cpp  DavidsonHamiltonian.cpp  DavidsonSolver.cpp  DenseDOCI.cpp  DenseHamiltonian.cpp  DenseHamiltonianSolver.cpp  DenseSolver.cpp  Extras.cpp  FCI.cpp  Hamiltonian.cpp  Io.cpp  MatrixSolver.cpp  NormalGenerator.cpp  RHFWrapper.cpp  SOptimizer.cpp  SparseDOCI.cpp  SparseSolver.cpp  State.cpp  bitlong.cpp  bitset.cpp  utility.cpp
tests/: CI_basis_test.cpp  CMakeLists.txt  DOCI_DENSE_test.cpp  DOCI_Davidson_test.cpp  DOCI_RDM_test.cpp  DOCI_dense_test.cpp  DOCI_sparse_test.cpp  DOCI_test.cpp  DenseDOCI_test.cpp  FCI_davidson_test.cpp  FCI_dense_test.cpp  FCI_sparse_test.cpp  FCI_test.cpp  Hamiltonian_test.cpp  NO_convergence.cpp  RDM_test.cpp  RHF_test.cpp  SparseDOCI_test.cpp  State_test.cpp  Thesis_mod_tests.cpp  file_to_CI_basis_test.cpp  mulliken_test.cpp  mulliken_tests.cpp  orbital_optimization_test.cpp  utility_tests.cpp
tools/: HEADER
tutu/: CMakeCache.txt  CTestTestfile.cmake  (+2 more)
(+101 files in other folders)
